master fix for dropdown overflow issue

--- a/src/thumper-dropdowns.scss
+++ b/src/thumper-dropdowns.scss
@@ -36,6 +36,7 @@
     margin-top: 0;
     padding-top: 0;
     padding-bottom: 0;
+    overflow: hidden;
 
     &.dropdown-menu-right {
       border-top-right-radius: 0;
@@ -66,7 +67,7 @@
       cursor: pointer;
       padding-top: 0.4375rem;
       padding-bottom: 0.4375rem;
-      
+
 
       &:focus {
         outline: none;
